--- a/data.qmd
+++ b/data.qmd
@@ -53,6 +53,10 @@ quality issues.
 ```{r}
 #install.packages("dplyr") 
 #install.packages("tidyr")
+```
+
+
+```{r}
 library(ggplot2)
 library(dplyr)
 library(tidyr)
@@ -98,7 +102,7 @@ missing_long <- melt(missing_matrix, id.vars = "Row")
 # Create the heatmap
 ggplot(missing_long, aes(x = variable, y = Row, fill = value)) +
   geom_tile() +
-  scale_fill_manual(values = c("red", "black"), labels = c("Not Missing", "Missing")) +
+  scale_fill_manual(values = c("pink", "black"), labels = c("Not Missing", "Missing")) +
   labs(title = "Heatmap of Missing Values",
        x = "Variables",
        y = "Rows",
