made changes to results and conclusion

--- a/results.qmd
+++ b/results.qmd
@@ -223,9 +223,10 @@ ggplot(top_counties, aes(x = reorder(County, -Charging_Stations), y = Charging_S
 
 ```
 
-The following bar chart represents the number of electric vehicle-charging stations across the state of Washington, focusing on the top 10 counties. Against the rest of the counties, King County stands at a very high level regarding the number of charging stations, very telling about its centrality with respect to this issue. The rest, in order of numbers, are Snohomish and Pierce counties, though their totals are far fewer, meaning infrastructure in highly urbanized, densely populated areas is concentrated. In the middle-range counties, there is Clark, Thurston, and Kitsap. Spokane, Whatcom, Benton, and Skagit complete the top 10, but their contribution becomes disproportionately smaller compared to the previous ones.
+The bar chart represents the number of electric vehicle-charging stations across the state of Washington, focusing on the top 10 counties. Against the rest of the counties, King County stands at a very high level regarding the number of charging stations, which shows its centrality with respect to this issue. The rest, in order of numbers, are Snohomish and Pierce counties, though their totals are far fewer, meaning infrastructure in highly urbanized, densely populated areas is concentrated. In the middle-range counties, there is Clark, Thurston, and Kitsap. Spokane, Whatcom, Benton, and Skagit, and their contribution becomes disproportionately smaller compared to the previous ones.
 
-The above visualization highlights the disparities that exist geographically in the state's EV charging infrastructure. King County's preeminence speaks to its urban nature and likely higher rates of EV adoption, favored by both government incentives and private investment. For this project, understanding this distribution is important in identifying areas that are not well served and should factor into an expansion strategy of the EV charging network. These disparities, if addressed, can facilitate broader EV adoption and support statewide sustainability goals.
+This also highlights the disparities that exist geographically in the state's EV charging infrastructure. King County's preeminence speaks to its urban nature and likely higher rates of EV adoption, favored by both government incentives and private investment. For this project, understanding this distribution is important in identifying areas that are not well served and should factor into an expansion strategy of the EV charging network. These disparities, if addressed, can facilitate broader EV adoption and support statewide sustainability goals.
+
 
 
 
